@@ -8,10 +8,10 @@ gwt.sdk = /Users/juha/gwt/gwt-2.4.0
 #  - Minor version for compatible features
 #  - Last version for bug fixes
 #
-version = 2.13.7
+version = 2.13.7_MODELER-304
 
 # Build date (use YYYY-MM-DD format)
-build.date = 2012-10-07
+build.date = 2013-03-10
 
 # Build Identifier (arbitrary string name to match major.minor version -- for convenience)
 version.name = Rosemary
